@@ -2,6 +2,9 @@
 
 New in 8.3 version:
 
+* postgresql-setup prints warning about possible glibc collation on
+  successful upgrade.
+
 * postgresql-setup creates correct 'log_directory' based on PG version
   (the default changed from $datadir/pg_log to $datadir/log in v10).
 
